force-app/main/default/objects/Player__c/fields/Accuracy__c.field-meta.xml
<CustomField>
    <fullName>Accuracy__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Accuracy %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>