force-app/main/default/objects/Player__c/fields/BestStreak__c.field-meta.xml
<CustomField>
    <fullName>BestStreak__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Best Streak</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>