force-app/main/default/objects/Player__c/fields/CurrentRank__c.field-meta.xml
<CustomField>
    <fullName>CurrentRank__c</fullName>
    <label>Current Rank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bronze III</fullName>
            </value>
            <value>
                <fullName>Bronze II</fullName>
            </value>
            <value>
                <fullName>Bronze I</fullName>
            </value>
            <value>
                <fullName>Silver III</fullName>
            </value>
            <value>
                <fullName>Silver II</fullName>
            </value>
            <value>
                <fullName>Silver I</fullName>
            </value>
            <value>
                <fullName>Gold III</fullName>
            </value>
            <value>
                <fullName>Gold II</fullName>
            </value>
            <value>
                <fullName>Gold I</fullName>
            </value>
            <value>
                <fullName>Platinum III</fullName>
            </value>
            <value>
                <fullName>Platinum II</fullName>
            </value>
            <value>
                <fullName>Platinum I</fullName>
            </value>
            <value>
                <fullName>Diamond III</fullName>
            </value>
            <value>
                <fullName>Diamond II</fullName>
            </value>
            <value>
                <fullName>Diamond I</fullName>
            </value>
            <value>
                <fullName>Master</fullName>
            </value>
            <value>
                <fullName>Grandmaster</fullName>
            </value>
            <value>
                <fullName>Champion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>