force-app/main/default/objects/Player__c/fields/CurrentStreak__c.field-meta.xml
<CustomField>
    <fullName>CurrentStreak__c</fullName>
    <label>Current Streak</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <defaultValue>0</defaultValue>
</CustomField>