force-app/main/default/objects/Player__c/fields/FavoriteGame__c.field-meta.xml
<CustomField>
    <fullName>FavoriteGame__c</fullName>
    <label>Favorite Game</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call of Duty</fullName>
            </value>
            <value>
                <fullName>PUBG</fullName>
            </value>
            <value>
                <fullName>Fortnite</fullName>
            </value>
            <value>
                <fullName>Chess Master</fullName>
            </value>
            <value>
                <fullName>Puzzle Quest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>