force-app/main/default/objects/Player__c/fields/Headshots__c.field-meta.xml
<CustomField>
    <fullName>Headshots__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Headshots</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>