force-app/main/default/objects/Player__c/fields/HighestStreak__c.field-meta.xml
<CustomField>
    <fullName>HighestStreak__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Highest Streak</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>