force-app/main/default/objects/Player__c/fields/HoursPlayed__c.field-meta.xml
<CustomField>
    <fullName>HoursPlayed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Hours Played</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>