force-app/main/default/objects/Player__c/fields/KDRatio__c.field-meta.xml
<CustomField>
    <fullName>KDRatio__c</fullName>
    <formula>IF(TotalDeaths__c &gt; 0, TotalKills__c / TotalDeaths__c, TotalKills__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>K/D Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>