force-app/main/default/objects/Player__c/fields/LastPlayedDate__c.field-meta.xml
<CustomField>
    <fullName>LastPlayedDate__c</fullName>
    <label>Last Played Date</label>
    <type>DateTime</type>
</CustomField>