force-app/main/default/objects/Player__c/fields/PlayerLevel__c.field-meta.xml
<CustomField>
    <fullName>PlayerLevel__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Player Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>