force-app/main/default/objects/Player__c/fields/PlayerName__c.field-meta.xml
<CustomField>
    <fullName>PlayerName__c</fullName>
    <label>Player Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>