force-app/main/default/objects/Player__c/fields/SubscriptionEndDate__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionEndDate__c</fullName>
    <label>Subscription End Date</label>
    <type>Date</type>
</CustomField>