force-app/main/default/objects/Player__c/fields/SubscriptionStartDate__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionStartDate__c</fullName>
    <label>Subscription Start Date</label>
    <type>Date</type>
</CustomField>