force-app/main/default/objects/Player__c/fields/SubscriptionType__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionType__c</fullName>
    <label>Subscription Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Free</fullName>
                <default>true</default>
                <label>Free</label>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Elite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>