force-app/main/default/objects/Player__c/fields/TotalDeaths__c.field-meta.xml
<CustomField>
    <fullName>TotalDeaths__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Deaths</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>