force-app/main/default/objects/Player__c/fields/TotalGamesPlayed__c.field-meta.xml
<CustomField>
    <fullName>TotalGamesPlayed__c</fullName>
    <label>Total Games Played</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>