force-app/main/default/objects/Player__c/fields/TotalHoursPlayed__c.field-meta.xml
<CustomField>
    <fullName>TotalHoursPlayed__c</fullName>
    <label>Total Hours Played</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>