force-app/main/default/objects/Player__c/fields/TotalMatches__c.field-meta.xml
<CustomField>
    <fullName>TotalMatches__c</fullName>
    <formula>TotalWins__c + TotalLosses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Matches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>