force-app/main/default/objects/Player__c/fields/WinRate__c.field-meta.xml
<CustomField>
    <fullName>WinRate__c</fullName>
    <formula>IF((TotalWins__c + TotalLosses__c) &gt; 0, (TotalWins__c / (TotalWins__c + TotalLosses__c)) * 100, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Win Rate %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>