force-app/main/default/objects/Player__c/recordTypes/GameRecord.recordType-meta.xml
<RecordType>
    <fullName>GameRecord</fullName>
    <active>true</active>
    <description>Record type for tracking player game records and subscription information</description>
    <label>Game Record</label>
</RecordType>