force-app/main/default/objects/Player__c/listViews/all_players.listView-meta.xml
<ListView>
    <fullName>all_players</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>PlayerName__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Mine</filterScope>
    <label>all players</label>
</ListView>